--- a/MVCBiblioteka/MVCBiblioteka.csproj
+++ b/MVCBiblioteka/MVCBiblioteka.csproj
@@ -197,11 +197,13 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BooksController.cs" />
+    <Compile Include="Controllers\CategoriesController.cs" />
     <Compile Include="Controllers\CheckoutController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\OrderDetailsController.cs" />
     <Compile Include="Controllers\RolesController.cs" />
-    <Compile Include="Controllers\ShoppingCartController.cs" />
+    <Compile Include="Controllers\BooksCartController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -262,6 +264,38 @@
     <Compile Include="Migrations\201612071301520_heh2.Designer.cs">
       <DependentUpon>201612071301520_heh2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201612072132114_lends.cs" />
+    <Compile Include="Migrations\201612072132114_lends.Designer.cs">
+      <DependentUpon>201612072132114_lends.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201612072142552_lends1.cs" />
+    <Compile Include="Migrations\201612072142552_lends1.Designer.cs">
+      <DependentUpon>201612072142552_lends1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201612072146538_lends2.cs" />
+    <Compile Include="Migrations\201612072146538_lends2.Designer.cs">
+      <DependentUpon>201612072146538_lends2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201612072151485_lends3.cs" />
+    <Compile Include="Migrations\201612072151485_lends3.Designer.cs">
+      <DependentUpon>201612072151485_lends3.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201612072153053_lends4.cs" />
+    <Compile Include="Migrations\201612072153053_lends4.Designer.cs">
+      <DependentUpon>201612072153053_lends4.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201612072157510_lends5.cs" />
+    <Compile Include="Migrations\201612072157510_lends5.Designer.cs">
+      <DependentUpon>201612072157510_lends5.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201612072325069_lends6.cs" />
+    <Compile Include="Migrations\201612072325069_lends6.Designer.cs">
+      <DependentUpon>201612072325069_lends6.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201612072330410_lends7.cs" />
+    <Compile Include="Migrations\201612072330410_lends7.Designer.cs">
+      <DependentUpon>201612072330410_lends7.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Author.cs" />
@@ -269,16 +303,15 @@
     <Compile Include="Models\Cart.cs" />
     <Compile Include="Models\Category.cs" />
     <Compile Include="Models\IdentityModels.cs" />
-    <Compile Include="Models\Lend.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Order.cs" />
     <Compile Include="Models\OrderDetail.cs" />
     <Compile Include="Models\Publisher.cs" />
-    <Compile Include="Models\ShoppingCart.cs" />
+    <Compile Include="Models\BooksCart.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
-    <Compile Include="ViewModels\ShoppingCartRemoveViewModel.cs" />
-    <Compile Include="ViewModels\ShoppingCartViewModel.cs" />
+    <Compile Include="ViewModels\BooksCartRemoveViewModel.cs" />
+    <Compile Include="ViewModels\BooksCartViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
@@ -345,15 +378,29 @@
     <Content Include="Views\Books\Details.cshtml" />
     <Content Include="Views\Books\Edit.cshtml" />
     <Content Include="Views\Books\Index.cshtml" />
-    <Content Include="Views\ShoppingCart\Index.cshtml" />
+    <Content Include="Views\BooksCart\Index.cshtml" />
     <Content Include="Views\Checkout\AddressAndPayment.cshtml" />
     <Content Include="Views\Checkout\Complete.cshtml" />
-    <Content Include="Views\ShoppingCart\CartSummary.cshtml" />
+    <Content Include="Views\BooksCart\CartSummary.cshtml" />
     <Content Include="Views\Users\Create.cshtml" />
     <Content Include="Views\Users\Delete.cshtml" />
     <Content Include="Views\Users\Details.cshtml" />
     <Content Include="Views\Users\Edit.cshtml" />
     <Content Include="Views\Users\Index.cshtml" />
+    <Content Include="Views\Home\GenreMenu.cshtml" />
+    <Content Include="Views\Home\Browse.cshtml" />
+    <Content Include="Views\Categories\Create.cshtml" />
+    <Content Include="Views\Categories\Delete.cshtml" />
+    <Content Include="Views\Categories\Details.cshtml" />
+    <Content Include="Views\Categories\Edit.cshtml" />
+    <Content Include="Views\Categories\Index.cshtml" />
+    <Content Include="Views\Home\Details.cshtml" />
+    <Content Include="Views\Manage\getOrders.cshtml" />
+    <Content Include="Views\OrderDetails\Create.cshtml" />
+    <Content Include="Views\OrderDetails\Delete.cshtml" />
+    <Content Include="Views\OrderDetails\Details.cshtml" />
+    <Content Include="Views\OrderDetails\Edit.cshtml" />
+    <Content Include="Views\OrderDetails\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -409,6 +456,30 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201612071301520_heh2.resx">
       <DependentUpon>201612071301520_heh2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612072132114_lends.resx">
+      <DependentUpon>201612072132114_lends.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612072142552_lends1.resx">
+      <DependentUpon>201612072142552_lends1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612072146538_lends2.resx">
+      <DependentUpon>201612072146538_lends2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612072151485_lends3.resx">
+      <DependentUpon>201612072151485_lends3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612072153053_lends4.resx">
+      <DependentUpon>201612072153053_lends4.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612072157510_lends5.resx">
+      <DependentUpon>201612072157510_lends5.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612072325069_lends6.resx">
+      <DependentUpon>201612072325069_lends6.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612072330410_lends7.resx">
+      <DependentUpon>201612072330410_lends7.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
