--- a/MVCBiblioteka/MVCBiblioteka.csproj
+++ b/MVCBiblioteka/MVCBiblioteka.csproj
@@ -196,12 +196,14 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AuthorsController.cs" />
     <Compile Include="Controllers\BooksController.cs" />
     <Compile Include="Controllers\CategoriesController.cs" />
     <Compile Include="Controllers\CheckoutController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\OrderDetailsController.cs" />
+    <Compile Include="Controllers\PublishersController.cs" />
     <Compile Include="Controllers\RolesController.cs" />
     <Compile Include="Controllers\BooksCartController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
@@ -441,6 +443,20 @@
     <Content Include="Views\Manage\Details.cshtml" />
     <Content Include="Views\Categories\Browse.cshtml" />
     <Content Include="Views\Categories\CategoriesList.cshtml" />
+    <Content Include="Views\Authors\Create.cshtml" />
+    <Content Include="Views\Authors\Delete.cshtml" />
+    <Content Include="Views\Authors\Details.cshtml" />
+    <Content Include="Views\Authors\Edit.cshtml" />
+    <Content Include="Views\Authors\Index.cshtml" />
+    <Content Include="Views\Publishers\Create.cshtml" />
+    <Content Include="Views\Publishers\Delete.cshtml" />
+    <Content Include="Views\Publishers\Details.cshtml" />
+    <Content Include="Views\Publishers\Edit.cshtml" />
+    <Content Include="Views\Publishers\Index.cshtml" />
+    <Content Include="Views\Authors\Browse.cshtml" />
+    <Content Include="Views\Authors\AuthorsList.cshtml" />
+    <Content Include="Views\Publishers\publishersList.cshtml" />
+    <Content Include="Views\Publishers\Browse.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
