--- a/MVCBiblioteka/MVCBiblioteka.csproj
+++ b/MVCBiblioteka/MVCBiblioteka.csproj
@@ -346,6 +346,10 @@
     <Compile Include="Migrations\201612091048068_search.Designer.cs">
       <DependentUpon>201612091048068_search.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201612140016393_bookscart.cs" />
+    <Compile Include="Migrations\201612140016393_bookscart.Designer.cs">
+      <DependentUpon>201612140016393_bookscart.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Author.cs" />
@@ -470,6 +474,8 @@
     <Content Include="Views\Authors\AuthorsList.cshtml" />
     <Content Include="Views\Publishers\publishersList.cshtml" />
     <Content Include="Views\Publishers\Browse.cshtml" />
+    <Content Include="Views\Shared\_Admin.cshtml" />
+    <Content Include="Views\Users\Admin.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -580,6 +586,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201612091048068_search.resx">
       <DependentUpon>201612091048068_search.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201612140016393_bookscart.resx">
+      <DependentUpon>201612140016393_bookscart.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
